--- a/WebFileCommunitySystem/Site.Master
+++ b/WebFileCommunitySystem/Site.Master
@@ -1,77 +1,176 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="WebFileCommunitySystem.SiteMaster" %>
 
-<!DOCTYPE html>
+    <!DOCTYPE html>
 
-<html lang="zh">
-<head runat="server">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - 我的 ASP.NET 应用程序</title>
+    <html lang="zh">
 
-    <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
+    <head runat="server">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <webopt:BundleReference runat="server" Path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <title>- We Room |Share & editor</title>
+        <asp:PlaceHolder runat="server">
+            <%: Scripts.Render("~/bundles/modernizr") %>
+        </asp:PlaceHolder>
+        <webopt:BundleReference runat="server" Path="~/Content/css" />
+        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css">
+        <style>
+            .radiobt {
+                border-radius: 38px;
+            }
+            
+            .fulltxt {
+                background-color: #272020;
+                z-index: 1111;
+                padding: 0px;
+                position: fixed;
+                left: 0px;
+                top: 0px;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                color: white;
+            }
+            
+            .f-sm {
+                font-size: xx-small;
+            }
+            
+            .filedir {
+                z-index: 111111;
+                position: fixed;
+                right: 10px;
+                bottom: 10%;
+                transition: 3s;
+                -webkit-transition: 3s;
+                /* Safari */
+            }
+            
+            .filedir :hover {
+                width: auto;
+                height: auto;
+            }
+            
+            .rab {
+                border: solid 1px gray;
+                border-radius: 5px
+            }
+            
+            .rabb {
+                border: solid 1px gray;
+                border-radius: 15px
+            }
+        </style>
+        <script>
+            function dele() {
+                //var pw=prompt("请输入删除密码","ok?");
+                //   if (pw != null && pw == "ok") {
+                //       alert('删除中...')
+                //       return true;
+                //   }
+                //   else false;
+                return confirm("是否删除");
+            }
 
-</head>
-<body>
-    <form runat="server">
-        <asp:ScriptManager runat="server">
-            <Scripts>
-                <%--若要了解有关在 ScriptManager 中绑定脚本的详细信息，请参阅 https://go.microsoft.com/fwlink/?LinkID=301884 --%>
-                <%--框架脚本--%>
-                <asp:ScriptReference Name="MsAjaxBundle" />
-                <asp:ScriptReference Name="jquery" />
-                <asp:ScriptReference Name="bootstrap" />
-                <asp:ScriptReference Name="respond" />
-                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-                <asp:ScriptReference Name="WebFormsBundle" />
-                <%--站点脚本--%>
-            </Scripts>
-        </asp:ScriptManager>
+            function cancel() {
+                return confirm()
+            }
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+
+
+
+
+            //$("#show").click(function(){
+            //  $("p").show();
+            //});
+
+            //$(document).ready(function(){
+            //  $("button").click(function(){
+            //    $("p").hide(1000);
+            //  });
+            //});
+
+            //$(document).ready(function(){
+            //  $("button").click(function(){
+            //    $("p").toggle();
+            //  });
+            //});
+
+            //$(document).ready(function(){
+            //  $("#flip").click(function(){
+            //    $("#panel").slideToggle("slow");
+            //  });
+            //});
+        </script>
+    </head>
+
+    <body>
+        <!--[if IE]>
+		<script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+	<![endif]-->
+        <form runat="server">
+            <asp:ScriptManager runat="server">
+                <Scripts>
+                    <%--若要了解有关在 ScriptManager 中绑定脚本的详细信息，请参阅 https://go.microsoft.com/fwlink/?LinkID=301884 --%>
+                        <%--框架脚本--%>
+                            <asp:ScriptReference Name="MsAjaxBundle" />
+                            <asp:ScriptReference Name="jquery" />
+                            <asp:ScriptReference Name="bootstrap" />
+                            <asp:ScriptReference Name="respond" />
+                            <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
+                            <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
+                            <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
+                            <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
+                            <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
+                            <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
+                            <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
+                            <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
+                            <asp:ScriptReference Name="WebFormsBundle" />
+                            <%--站点脚本--%>
+                </Scripts>
+            </asp:ScriptManager>
+
+            <div class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">We Room</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">主页</a></li>
-                        <li><a runat="server" href="~/Community">We Conversation 谈话室</a></li>
-                        <li><a runat="server" href="~/About">关于</a></li>
-                        <li><a runat="server" href="~/Contact">联系方式</a></li>
-                    </ul>
+                        <a class="navbar-brand" runat="server" href="~/">We Room</a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a runat="server" href="~/">主页</a></li>
+                            <li><a runat="server" href="~/Community">We Conversation 谈话室</a></li>
+                            <li><a runat="server" href="~/editor/Editor.aspx">在线文档</a></li>
+                            <li><a runat="server" href="~/Contact">联系方式</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <a style="position: fixed; right: 5px; bottom: 8px;" target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=_p_XmJuVmJuVl5uTlrqclYKXm5OW1JmVlw" style="text-decoration: none;">
-                    <img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_01.png" /></a>
-                <p>&copy; <%:t.GetTime() %> -   WE RooM-Applacation @author 吃火星的宝宝</p>
-            </footer>
-        </div>
+            <div class="container body-content">
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+                <hr />
+                <footer>
+                    <a style="position: fixed; right: 5px; bottom: 8px;" target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=_p_XmJuVmJuVl5uTlrqclYKXm5OW1JmVlw" style="text-decoration: none;">
+                        <img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_01.png" /></a>
+                    <p>&copy;
+                        <%:DateTime.Now+"-" %> - WE RooM-Applacation @author 吃火星的宝宝</p>
+                </footer>
+            </div>
 
-    </form>
-</body>
-</html>
+
+        </form>
+
+
+    </body>
+
+    </html>
